[gd_scene load_steps=16 format=2]

[ext_resource path="res://Main/basename/font/static/Oswald-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Main/basename/font/static/Oswald-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Main/basename/fond.png" type="Texture" id=3]
[ext_resource path="res://Main/basename/lancerbutton.png" type="Texture" id=4]
[ext_resource path="res://Main/base_name.tscn" type="PackedScene" id=5]
[ext_resource path="res://Main/Main.tscn" type="PackedScene" id=6]
[ext_resource path="res://Main/menu.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 15
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="Theme" id=7]
LineEdit/colors/clear_button_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/clear_button_color_pressed = Color( 1, 1, 1, 1 )
LineEdit/colors/cursor_color = Color( 0.94, 0.94, 0.94, 1 )
LineEdit/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_uneditable = Color( 0.88, 0.88, 0.88, 0.5 )
LineEdit/colors/selection_color = Color( 0.49, 0.49, 0.49, 1 )
LineEdit/constants/minimum_spaces = 12
LineEdit/fonts/font = null
LineEdit/icons/clear = null
LineEdit/styles/focus = null
LineEdit/styles/normal = SubResource( 6 )
LineEdit/styles/read_only = null

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 1 )

[node name="menu" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
game = ExtResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
custom_constants/separation = 30

[node name="titre" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 984.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 1 )
text = "Parametre du jeu"
align = 1

[node name="Control" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 105.0
margin_right = 984.0
margin_bottom = 430.0

[node name="reglage" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Control"]
margin_right = 680.0
margin_bottom = 325.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="question par personne" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Control/reglage"]
margin_right = 680.0
margin_bottom = 51.0
rect_clip_content = true

[node name="nom_parametre" type="Label" parent="MarginContainer/VBoxContainer/Control/reglage/question par personne"]
margin_top = 10.0
margin_right = 161.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "question par personne"

[node name="<" type="Button" parent="MarginContainer/VBoxContainer/Control/reglage/question par personne"]
margin_left = 165.0
margin_right = 189.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 3 )
text = "<"
flat = true

[node name="valeur" type="Label" parent="MarginContainer/VBoxContainer/Control/reglage/question par personne"]
margin_left = 193.0
margin_top = 6.0
margin_right = 220.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 4 )
text = "20"

[node name=">" type="Button" parent="MarginContainer/VBoxContainer/Control/reglage/question par personne"]
margin_left = 224.0
margin_right = 248.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 3 )
text = ">"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="temps" type="Label" parent="MarginContainer/VBoxContainer/Control/reglage/question par personne"]
margin_left = 252.0
margin_top = 14.0
margin_right = 294.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 5 )
text = "(rapide)"

[node name="nameplayer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Control"]
margin_left = 684.0
margin_right = 984.0
margin_bottom = 325.0
theme = SubResource( 7 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Control/nameplayer"]
margin_right = 300.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 8 )
text = "Nom des joueurs:"

[node name="PlayerNameEnter" parent="MarginContainer/VBoxContainer/Control/nameplayer" instance=ExtResource( 5 )]
pretext = "Player 1"

[node name="PlayerNameEnter2" parent="MarginContainer/VBoxContainer/Control/nameplayer" instance=ExtResource( 5 )]
margin_top = 135.0
margin_bottom = 185.0
pretext = "Player 2"

[node name="PlayerNameEnter3" parent="MarginContainer/VBoxContainer/Control/nameplayer" instance=ExtResource( 5 )]
margin_top = 205.0
margin_bottom = 255.0
pretext = "Player 3"

[node name="PlayerNameEnter4" parent="MarginContainer/VBoxContainer/Control/nameplayer" instance=ExtResource( 5 )]
margin_top = 275.0
margin_bottom = 325.0
pretext = "Player 4"

[node name="lancer" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 460.0
margin_right = 984.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/lancer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -250.0
margin_right = 250.0
margin_bottom = 75.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/VBoxContainer/Control/reglage/question par personne/<" to="." method="_on_m_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Control/reglage/question par personne/>" to="." method="_on_p_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/lancer/TextureButton" to="." method="_on_TextureButton_pressed"]
